<resources>
    <string name="app_name">BusStop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>

    <string name="nav_header_string">Login</string>
    <string name="nav_routes">Routes</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_history">History</string>
    <string name="nav_other">Other</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help &amp; Feedback</string>
</resources>
